# rainbow-rs

./: .gitignore  Cargo.toml  README.md  connect.py  instructiontype.txt  test_manually.py
.github/workflows/: release.yml  rust.yml
.reuse/: dep5
examples/: cwlitearm_loop_1000.elf  cwlitearm_loop_1000.lss  cwlitearm_loop_10000.elf  cwlitearm_loop_10000.lss  cwlitearm_loop_100000.elf  cwlitearm_loop_100000.lss  cwlitearm_loop_1000000.elf  cwlitearm_loop_1000000.lss  cwlitearm_xor.elf  cwlitearm_xor.lss  measure_performance.rs
src/: asmutils.rs  communication.rs  error.rs  itc.rs  leakage.rs  lib.rs  main.rs  memory_extension.rs  tests.rs  trace_emulator.rs
tests/: libtests.rs
