[package]
name = "rainbow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.44.0"
capstone = "0.11.0"
debug-cell = "0.1.1"
elf = "0.7.2"
log = "0.4.19"
simple_logger = "4.2.0"
# unicorn-engine = {git = 'https://github.com/unicorn-engine/unicorn.git', branch = 'dev', features = ['dynamic_linkage']}
unicorn-engine = {version = '2.0.1', features = ['dynamic_linkage']}
