[package]
name = "rainbow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
capstone = "0.11.0"
clap = { version = "4.3.8", features = ["derive"] }
elf = "0.7.2"
log = "0.4.19"
simple_logger = "4.2.0"
unicorn-engine = {version = '2.0.1', features = ['dynamic_linkage']}

[dev-dependencies]
ctor = "0.2.2"
env_logger = "0.10.0"
