# SPDX-FileCopyrightText: 2023 Stefan Hackenberg <mail@stefan-hackenberg.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "rainbow-rs"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
arrayvec = "0.7.4"
capstone = "0.11.0"
clap = { version = "4.3.8", features = ["derive"] }
crossbeam-channel = "0.5.8"
elf = "0.7.2"
itertools = "0.12.1"
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
simple_logger = "4.2.0"
unicorn-engine = {version = '2.0.1'}

[dev-dependencies]
ctor = "0.2.2"
env_logger = "0.10.0"
num_cpus = "1.16.0"
thousands = "0.2.0"

[profile.release]
debug = true
